Manifests/SmartETL/nifi-registry/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-registry
  labels:
    app: nifi-registry
  annotations:
    app.kubernetes.io/name: nifi-registry
    app.kubernetes.io/part-of: nifi-registry
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
  selector:
    app: nifi-registry
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 18080
      name: http
    - protocol: TCP
      port: 18443
      targetPort: 18443
      name: https
